# rethink

./: .gitignore  README.md  pyproject.toml
preprocessors/: __init__.py  pdf2txt.py
rethink/cli/: ephemeral.py
rethink/preprocessors/: __init__.py  pdf2txt.py
