[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[project]
requires-python = ">=3.8"
version = "0.0.1"

name        = "rethink"
description = ""
readme      = "README.md"
license     = "MIT"

dependencies = [
    "nltk",
    "pdfplumber",

    # "transformers",
    # "tensorflow-gpu",
]

# [project.optional-dependencies]
# cpu = [ "tensorflow", ]

# gpu = [ "tensorflow-gpu", ]


[project.scripts]
rethink = "rethink.cli.ephemeral:main"

